--- a/index.html
+++ b/index.html
@@ -33,6 +33,15 @@
             </div>
 
             <div>
+                <h4>FabFilter</h4>
+                <ul>
+                    <li>Pro-Q 3</li>
+                    <li>Pro-C 2</li>
+                    <li>Saturn 2</li>
+                </ul>
+            </div>
+
+            <div>
                 <h4>Izotope</h4>
                 <ul>
                     <li>Alloy 2</li>
