--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                     <li>Nectar 2</li>
                     <li>Ozone 9 Advanced</li>
                     <li>Trash 2</li>
+                    <li>Vinyl</li>
                 </ul>
             </div>
 
@@ -56,6 +57,7 @@
                 <ul>
                     <li>Room Reverb</li>
                     <li>Space Modulator</li>
+                    <li>Super Massive</li>
                 </ul>
             </div>
 
@@ -87,6 +89,9 @@
                 <ul>
                     <li>Exhale</li>
                 </ul>
+            </div>
+            <div>
+                <h4>iLok License Manager</h4>
             </div>
         </section>
         <hr />
