--- a/index.html
+++ b/index.html
@@ -26,12 +26,11 @@
         <section>
             <h3>Plugins</h3>
             <div>
-                <h4>Native Instruments</h4>
+                <h4>Arturia</h4>
                 <ul>
-                    <li>Komplete 11 Ultimate</li>
+                    <li>Tape MELLO-FI</li>
                 </ul>
             </div>
-
             <div>
                 <h4>FabFilter</h4>
                 <ul>
@@ -40,7 +39,9 @@
                     <li>Saturn 2</li>
                 </ul>
             </div>
-
+            <div>
+                <h4>iLok License Manager</h4>
+            </div>
             <div>
                 <h4>Izotope</h4>
                 <ul>
@@ -51,7 +52,36 @@
                     <li>Vinyl</li>
                 </ul>
             </div>
-
+            <div>
+                <h4>LennarDigital</h4>
+                <ul>
+                    <li>Sylenth1</li>
+                </ul>
+            </div>
+            <div>
+                <h4>Native Instruments</h4>
+                <ul>
+                    <li>Komplete 11 Ultimate</li>
+                </ul>
+            </div>
+            <div>
+                <h4>Neural DSP</h4>
+                <ul>
+                    <li>Archetype Tim Henson</li>
+                </ul>
+            </div>
+            <div>
+                <h4>Output</h4>
+                <ul>
+                    <li>Exhale</li>
+                </ul>
+            </div>
+            <div>
+                <h4>ReFX</h4>
+                <ul>
+                    <li>Nexus 2</li>
+                </ul>
+            </div>
             <div>
                 <h4>Valhalla</h4>
                 <ul>
@@ -60,21 +90,6 @@
                     <li>Super Massive</li>
                 </ul>
             </div>
-
-            <div>
-                <h4>ReFX</h4>
-                <ul>
-                    <li>Nexus 2</li>
-                </ul>
-            </div>
-
-            <div>
-                <h4>LennarDigital</h4>
-                <ul>
-                    <li>Sylenth1</li>
-                </ul>
-            </div>
-
             <div>
                 <h4>xfer records</h4>
                 <ul>
@@ -82,16 +97,6 @@
                     <li>LFO Tool</li>
                     <li>OTT</li>
                 </ul>
-            </div>
-
-            <div>
-                <h4>Output</h4>
-                <ul>
-                    <li>Exhale</li>
-                </ul>
-            </div>
-            <div>
-                <h4>iLok License Manager</h4>
             </div>
         </section>
         <hr />
@@ -101,7 +106,7 @@
                 <li>Cymatics</li>
                 <li>8Dio</li>
                 <li>Vengeance</li>
-                <li>Asl Soundlab</li>
+                <li>ASL Soundlab</li>
             </ul>
         </section>
         <hr />
@@ -109,7 +114,7 @@
             <h3>Presets</h3>
             <ul>
                 <li>Cymatics</li>
-                <li>Asl Soundlab</li>
+                <li>ASL Soundlab</li>
             </ul>
         </section>
 </body>
