--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
             <ul>
                 <li>Cymatics</li>
                 <li>ASL Soundlab</li>
+                <li>EDM Templates - Ultimate Midtempo</li>
             </ul>
         </section>
 </body>
