--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
 
 <head>
     <meta charset="utf-8">
-
     <title>Audio Production Software</title>
-
 </head>
 
 <body>
@@ -27,7 +25,8 @@
             <h3>Plugins</h3>
             <div>
                 <h4>Arturia</h4>
-                <ul>
+                <ul>                    
+                    <li>Pigments</li>
                     <li>Tape MELLO-FI</li>
                 </ul>
             </div>
@@ -107,6 +106,7 @@
                 <li>8Dio</li>
                 <li>Vengeance</li>
                 <li>ASL Soundlab</li>
+                <li>THEPHONOLOOP Cassette Bundle</li>
             </ul>
         </section>
         <hr />
