--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
             <h3>Plugins</h3>
             <div>
                 <h4>Arturia</h4>
-                <ul>                    
+                <ul>
+                    <li>Augmented GRAND PIANO</li>
                     <li>Pigments</li>
                     <li>Tape MELLO-FI</li>
                 </ul>
@@ -66,6 +67,7 @@
             <div>
                 <h4>Neural DSP</h4>
                 <ul>
+                    <li>Archetype Abasi</li>
                     <li>Archetype Tim Henson</li>
                 </ul>
             </div>
