--- a/index.html
+++ b/index.html
@@ -27,8 +27,21 @@
                 <h4>Arturia</h4>
                 <ul>
                     <li>Augmented GRAND PIANO</li>
+                    <li>Filter MS-20</li>
                     <li>Pigments</li>
                     <li>Tape MELLO-FI</li>
+                </ul>
+            </div>
+            <div>
+                <h4>Cherry Audio</h4>
+                <ul>
+                    <li>CA2600 Synthesizer</li>
+                </ul>
+            </div>
+            <div>
+                <h4>Excite Audio</h4>
+                <ul>
+                    <li>VISION 4X</li>
                 </ul>
             </div>
             <div>
@@ -50,6 +63,7 @@
                     <li>Ozone 9 Advanced</li>
                     <li>Trash 2</li>
                     <li>Vinyl</li>
+                    <li>VocalSynth 2</li>
                 </ul>
             </div>
             <div>
