--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
                 </ul>
             </div>
             <div>
+                <h4>CableGuys</h4>
+                <ul>
+                    <li>HalfTime</li>
+                </ul>
+            </div>
+            <div>
                 <h4>Cherry Audio</h4>
                 <ul>
                     <li>CA2600 Synthesizer</li>
