--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <section>
             <h3>DAWs</h3>
             <ul>
-                <li>FL Studio 20</li>
-                <li>Ableton Live 8</li>
+                <li>FL Studio 21</li>
+                <li>Ableton Live 11</li>
             </ul>
         </section>
         <hr />
@@ -89,6 +89,12 @@
                 <ul>
                     <li>Archetype Abasi</li>
                     <li>Archetype Tim Henson</li>
+                </ul>
+            </div>
+            <div>
+                <h4>Oeksound</h4>
+                <ul>
+                    <li>soothe2</li>
                 </ul>
             </div>
             <div>
