--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
                 <h4>Native Instruments</h4>
                 <ul>
                     <li>Komplete 11 Ultimate</li>
+                    <li>VocalSynth 2</li>
                 </ul>
             </div>
             <div>
