Add Waves plugins, GoodMorningSoundMachine samples, and Synth Blade presets

--- a/index.html
+++ b/index.html
@@ -119,6 +119,14 @@
                 </ul>
             </div>
             <div>
+                <h4>Waves Audio</h4>
+                <ul>
+                    <li>CLA EchoSphere</li>
+                    <li>L1 Ultramaximizer Native</li>
+                    <li>Silk Vocal</li>
+                </ul>
+            </div>
+            <div>
                 <h4>xfer records</h4>
                 <ul>
                     <li>Serum</li>
@@ -131,20 +139,23 @@
         <section>
             <h3>Samples</h3>
             <ul>
-                <li>Cymatics</li>
                 <li>8Dio</li>
-                <li>Vengeance</li>
                 <li>ASL Soundlab</li>
+                <li>Cymatics</li>
+                <li>Good Morning Sound Machine Magic Ensemble 01:Plucks</li>
+                <li>Good Morning Sound Machine SNACK PACK / Student Reeds</li>
                 <li>THEPHONOLOOP Cassette Bundle</li>
+                <li>Vengeance</li>
             </ul>
         </section>
         <hr />
         <section>
             <h3>Presets</h3>
             <ul>
-                <li>Cymatics</li>
                 <li>ASL Soundlab</li>
+                <li>Cymatics</li>
                 <li>EDM Templates - Ultimate Midtempo</li>
+                <li>Synth Blade CORE: Xfer Serum Preset Bundle</li>
             </ul>
         </section>
 </body>
