--- a/index.html
+++ b/index.html
@@ -14,22 +14,29 @@
     <hr />
     <main>
         <section>
-            <h3>DAWs</h3>
+            <h2>DAWs</h2>
             <ul>
                 <li>FL Studio 21</li>
-                <li>Ableton Live 11</li>
+                <li>Ableton Live 12</li>
             </ul>
         </section>
         <hr />
         <section>
-            <h3>Plugins</h3>
+            <h2>Plugins</h2>
             <div>
-                <h4>Arturia</h4>
+                <h3>Arturia</h3>
                 <ul>
                     <li>Augmented GRAND PIANO</li>
                     <li>Filter MS-20</li>
                     <li>Pigments</li>
                     <li>Tape MELLO-FI</li>
+                </ul>
+            </div>
+            <div>
+                <h3>BEATSURFING</h3>
+                <ul>
+                    <li>LunchTable</li>
+                    <li>Random</li>
                 </ul>
             </div>
             <div>
@@ -67,7 +74,7 @@
                     <li>Alloy 2</li>
                     <li>Nectar 2</li>
                     <li>Ozone 9 Advanced</li>
-                    <li>Trash 2</li>
+                    <li>Trash</li>
                     <li>Vinyl</li>
                     <li>VocalSynth 2</li>
                 </ul>
